<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".my.fragment.FeedbackFragment"
        android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
            android:background="@color/colorColor"
            style="@style/mw">

        <ImageView
                android:id="@+id/feedback_back"
                style="@style/my_textView_wwt"
                android:src="@drawable/ic_back"/>

        <TextView
                android:text="@string/my_ll_opinion"
                style="@style/feedback_opinion"/>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:text="@string/fragment_feedback_text_one"
            style="@style/fragment_feedback_text_one"/>

    <EditText
            android:id="@+id/feedback_et1"
            android:hint="@string/fragment_feedback_text_two"
            style="@style/fragment_feedback_edittext_one"/>

    <TextView
            android:text="@string/fragment_feedback_text_three"
            style="@style/fragment_feedback_text_one"/>

    <EditText
            android:id="@+id/feedback_et2"
            android:hint="@string/fragment_feedback_text_four"
            style="@style/fragment_feedback_edittext_two"/>

    <Button
            android:id="@+id/feedback_btn"
            android:text="@string/fragment_feedback_text_five"
            style="@style/fragment_feedback_button"/>

</LinearLayout>