<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HomeActivity"
        android:orientation="vertical">

    <FrameLayout
            android:id="@+id/home_frame"
            style="@style/home_activity_frameLauout">
    </FrameLayout>

    <RadioGroup android:id="@+id/home_radioG"
                style="@style/home_activity_radiogroup">

        <RadioButton
                android:id="@+id/home_radioB_curriculum"
                android:text="@string/home_activity_radioButton_one"
                android:textAlignment="center"
                style="@style/home_activity_radioButton">
        </RadioButton>

        <RadioButton
                android:id="@+id/home_radioB_study"
                style="@style/home_activity_radioButton"
                android:textAlignment="center"
                android:text="@string/home_activity_radioButton_two">
        </RadioButton>

        <RadioButton
                android:id="@+id/home_radioB_message"
                style="@style/home_activity_radioButton"
                android:textAlignment="center"
                android:text="@string/home_activity_radioButton_three">
        </RadioButton>

        <RadioButton
                android:id="@+id/home_radioB_me"
                style="@style/home_activity_radioButton"
                android:textAlignment="center"
                android:text="@string/home_activity_radioButton_four">
        </RadioButton>

    </RadioGroup>

</LinearLayout>