<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".message.MessageFragment"
              android:background="#fff"
              android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.TabLayout
            android:id="@+id/buy_tab"
            app:tabTextColor="@color/colorGray"
            app:tabSelectedTextColor="@color/colorBlack"
            app:tabIndicatorColor="@color/colorWhite"
            style="@style/fragment_message_tablayot">

    </android.support.design.widget.TabLayout>

   <RelativeLayout
           style="@style/mm">

       <android.support.v4.view.ViewPager
               style="@style/mmv"
               android:id="@+id/buy_viewpager"
               android:visibility="gone">
       </android.support.v4.view.ViewPager>

       <LinearLayout
               android:id="@+id/buy_Linear"
               style="@style/ww"
               android:layout_centerInParent="true"
               android:orientation="vertical">

           <TextView
                   style="@style/ww"
                   android:text="@string/fragment_message_text_one"
                   android:layout_gravity="center_horizontal"/>

           <TextView
                   style="@style/ww"
                   android:text="@string/fragment_message_text_two"/>

           <Button
                   android:id="@+id/buy_register_btn"
                   android:text="@string/register"
                   style="@style/fragment_message_button"/>

       </LinearLayout>

   </RelativeLayout>

</LinearLayout>